--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maps Marker</title>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBWEgUDHXalSWiv8zBxDAYO8jAQdYzxkTU"></script>
   </head>
   <body>
     <div id="app"></div>
